// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar render default 1`] = `
<nav
  className="navbar navbar-expand-lg navbar-light bg-light"
>
  <div
    className="collapse navbar-collapse"
  >
    <ul
      className="navbar-nav"
    />
  </div>
</nav>
`;

exports[`Navbar should render with children 1`] = `
<nav
  className="navbar navbar-expand-lg navbar-light bg-light"
>
  <div
    className="collapse navbar-collapse"
  >
    <ul
      className="navbar-nav"
    >
      children
    </ul>
  </div>
</nav>
`;

exports[`Navbar should render with children and className 1`] = `
<nav
  className="test-class navbar navbar-expand-lg navbar-light bg-light"
>
  <div
    className="collapse navbar-collapse"
  >
    <ul
      className="navbar-nav"
    >
      children
    </ul>
  </div>
</nav>
`;
